--- a/colors.css
+++ b/colors.css
@@ -1,46 +1,46 @@
-body,
-html {
-  background: blue;
-  padding: 0;
+body {
+  max-height: 100vh;
+  max-width: 100vw;
   margin: 0;
-  box-sizing: border-box;
 }
-section {
-    /* display: inline-block; */
-}
-.red {
+
+.palette-wrap {
+  max-height: 100vh;
+  max-width: 100vw;
   height: 100vh;
-  width: calc(100% / 6.2);
-  background: #dd4837;
-  display: inline-block;
+  width: 100vw;
+  /* background: linear-gradient(to right, red,orange,yellow,green, blue, violet); */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-.orange {
+
+.palette {
   height: 100vh;
-  width: calc(100% / 6.2);
-  background: #FFA52C;
-  display: inline-block;
+  flex-grow: 1;
+  flex-basis: 0;
 }
-.yellow {
-  height: 100vh;
-  width: calc(100% / 6.2);
-  background: #FFFF41;
-  display: inline-block;
+
+#red {
+  background: linear-gradient(to bottom, white, red, white);
 }
-.green {
-  height: 100vh;
-  width: calc(100% / 6.2);
-  background: #008018;
-  display: inline-block;
+
+#orange {
+  background: linear-gradient(to bottom, white, orange, white);
 }
-.blue {
-  height: 100vh;
-  width: calc(100% / 6.2);
-  background: #0000F9;
-  display: inline-block;
+
+#yellow {
+  background: linear-gradient(to bottom, white, yellow, white);
 }
-.violet {
-  height: 100vh;
-  width: calc(100% / 6.2);
-  background: #86007D;
-  display: inline-block;
+
+#green {
+  background: linear-gradient(to bottom, white, green, white);
+}
+
+#blue {
+  background: linear-gradient(to bottom, white, blue, white);
+}
+
+#violet {
+  background: linear-gradient(to bottom, white, violet, white);
 }
