--- a/colors.css
+++ b/colors.css
@@ -9,7 +9,7 @@ body {
   max-width: 100vw;
   height: 100vh;
   width: 100vw;
-  /* background: linear-gradient(to right, red,orange,yellow,green, blue, violet); */
+  background: linear-gradient(to right, #dd4837,orange,yellow,green, blue, violet);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -20,9 +20,9 @@ body {
   flex-grow: 1;
   flex-basis: 0;
 }
-
+/* 
 #red {
-  background: linear-gradient(to bottom, white, red, white);
+  background: linear-gradient(to bottom, white, #dd4837, white);
 }
 
 #orange {
@@ -43,4 +43,4 @@ body {
 
 #violet {
   background: linear-gradient(to bottom, white, violet, white);
-}
+} */
